--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "node ./src/server.js"
   },
   "keywords": [
     "nodejs",
@@ -14,6 +14,7 @@
   "author": "Hoang",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.10",
+    "express": "^4.21.2"
   }
 }
