--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Hoang",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "16.0.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2"
   }
